js paralax on logo test 1

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="styles/color_shadows.css">
 	<link rel="stylesheet" href="styles/articles.css">
 </head>
-<body onresize="onScroll(true)">
+<body onresize="onResize(true)" onready>
 	<div class="upper_frame">
 		<nav>
 			<img class="typo_logo"
@@ -112,6 +112,7 @@
 				</h2>
 			</nav>
 			<div class="container">
+				<div class="frame"></div>
 				<div class="frame">
 					<article>
 						<div class="logo_wrapper">
@@ -132,7 +133,6 @@
 						<p>Ceci est un paragraphe explicatif du feur. Le feur est l'essence meme du quoicoubé</p>
 					</article>
 				</div>
-				<div class="frame"></div>
 				<div class="frame"></div>
 				<div class="frame"></div>
 			</div>
