mobile nav color change is working.

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			</nav>
 			<div class="container">
 				<div class="frame">
-					<h2 color="black">Who are we</h2>
+					<h2 color="black">WHO ARE WE</h2>
 					<article>
 						<div class="bg_img_wrapper">
 							<img id="bg_brainstorm" src="data/imgs/front_page/IMG_20210523_200029.jpg" alt="feur">
@@ -111,11 +111,11 @@
 						<div class="logo_wrapper big_one">
 							<img src="vector_graphics/V1_simple.svg"/>
 						</div>
-						<p>Nous sommes qui nous sommes bordel de cul</p>
+						<p style="color: black">Nous sommes qui nous sommes bordel de cul</p>
 					</article>
 				</div>
 				<div class="frame">
-					<h2>Nos Valeurs</h2>
+					<h2 color="white">NOS VALEURS</h2>
 					<article>
 						<div class="logo_wrapper">
 							<svg xmlns="http://www.w3.org/2000/svg" xml:space="preserve" viewBox="0 0 1000 1000" >
@@ -154,17 +154,18 @@
 					</article>
 				</div>
 				<div class="frame">
-					<h2>Our residents</h2>
+					<h2 color="red">NOS RESIDENTS</h2>
 				</div>
 				<div class="frame">
-					<h2>Contacts</h2>
+					<h2 color="white">CONTACTS</h2>
 				</div>
-				<div class="frame"></div>
+				<div class="frame">
+					<h2 color="blue">FEUR</h2>
+				</div>
 			</div>
 		</div>
 	</div>
-	<h1>other shits</h1>
-	<div>saucsifdqfsngqsdl</div>
+
 	<script src="scripts/main_page_navigation.js"></script>
 </body>
 
