positionned animation frame in landscape mode

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="styles/color_shadows.css">
 	<link rel="stylesheet" href="styles/articles.css">
 	<link rel="stylesheet" href="styles/bg_img.css">
+	<link rel="stylesheet" href="styles/main_frame.css">
 </head>
 <body onresize="onResize(true)" onready>
 	<div class="upper_frame">
@@ -105,7 +106,7 @@
 				<div class="frame" id="animation">
 					<h2></h2>
 					<div>
-						<article>
+						<article id="news">
 							<h3>WHAT'S NEW</h3>
 							<?xml version="1.0" encoding="utf-8"?>
 						</article>
