--- a/public/index.html
+++ b/public/index.html
@@ -107,7 +107,7 @@
 				<div class="frame" id="animation">
 					<h2></h2>
 					<div>
-						<div id="news">
+						<article id="news">
 							<h3>WHAT'S NEW</h3>
 							<div id="news_container">
 								<article class="news_title">
@@ -119,7 +119,7 @@
 									</p>
 								</article>
 							</div>
-						</div>
+						</article>
 						<svg id="anim" version="1.1" width="1200px" height="1200px" viewBox="0 0 1200 1200" xmlns="http://www.w3.org/2000/svg" style="stroke: black; stroke-width: 4px; stroke-linejoin: round" >
 							<style>
 								#anim{
